# wecom-notifier

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  setup.py  项目需求.md
doc/: PUBLISH_TO_PYPI.md  logging_configuration_guide.md  test_report_v0.1.4.md  wecom_notifier_logging_best_practices.md  上传pypi.md  企微机器人.md  单包多平台架构设计方案.md  发布到PyPI指南.md
doc/飞书/: 使用自定义机器人发送飞书卡片.md  富文本（Markdown）.md  自定义机器人使用指南.md
examples/: basic_usage.py  feishu_usage.py  multi_platform.py
tests/: BUG_FIXES.md  TEST_REPORT.md  debug_segments.py  test_all_features.py  test_automated.py  test_backward_compatibility.py  test_content_moderation.py  test_feishu.py  test_fixes.py  test_logging_refactor.py  test_multi_instance.py  test_pagination.py  test_pool_base.py  test_protocols.py  test_quick.py  test_rate_limit_retry.py  test_real_webhook_pool.py  test_send_llm_summary.py  test_sensitive_logging.py  test_webhook_pool.py  test_wechat_real.py  test_wecom_notifier.py
wecom_notifier/: __init__.py  constants.py  content_filter.py  content_moderator.py  exceptions.py  logger.py  models.py  moderation_strategies.py  notifier.py  rate_limiter.py  segmenter.py  sender.py  sensitive_logger.py  sensitive_word_loader.py  webhook_manager.py  webhook_pool.py  webhook_resource.py
wecom_notifier/core/: __init__.py  constants.py  exceptions.py  logger.py  models.py  pool_base.py  protocols.py  rate_limiter.py  segmenter.py
wecom_notifier/core/moderation/: __init__.py  filter.py  moderator.py  sensitive_logger.py  strategies.py  word_loader.py
